Fixed Profile dropdown header overflow

--- a/app/styles/v2/Vivanuncios/partials/components/header/_header.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/header/_header.scss
@@ -179,7 +179,7 @@ $dropdown-width: 220px;
         background-color: transparent;
         width: 100%;
 		max-width: $dropdown-width;
-        height: 50px;
+        height: 65px;
         overflow: hidden;
         text-align: left;
 		box-sizing: border-box;
